k8s/kustomize/web_api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: api
          image: syncnow/webapi:latest
          ports:
            - containerPort: 80
          livenessProbe:
            exec:
              command:
                - cat
                - ./server
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 3
            initialDelaySeconds: 10
