k8s/kustomize/web_api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  selector:
    app: webapi
  ports:
    - name: http
      port: 80
