k8s/kustomize/web_api/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: webapi
              servicePort: 80
